fixes slider loading position on mobile

--- a/client/src/styles/swiper.scss
+++ b/client/src/styles/swiper.scss
@@ -66,6 +66,10 @@
     }
 }
 
+.swiper-slide {
+    align-self: center;
+}
+
 @screen lg {
     .swiper-button-next, .swiper-button-prev {
         visibility: visible;
